--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Flickr Public Feed</title>
+    <title>Flickr/Yandex Public Feed</title>
     <link rel="stylesheet" href="static/styles.css" />
 </head>
 <body>
